--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -4,7 +4,6 @@ applications:
   host: allocations-pal-sk
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-sk.apps.evans.pal.pivotal.io
   services:
   - tracker-allocations-database
+    tracker-service-registry
