--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -4,7 +4,6 @@ applications:
   host: timesheets-pal-sk
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-sk.apps.evans.pal.pivotal.io
   services:
   - tracker-timesheets-database
+    tracker-service-registry
