--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -6,4 +6,4 @@ applications:
   instances: 1
   services:
   - tracker-allocations-database
-    tracker-service-registry
+  - tracker-service-registry
