--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -6,4 +6,4 @@ applications:
   instances: 1
   services:
   - tracker-registration-database
-    tracker-service-registry
+  - tracker-service-registry
