--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -6,4 +6,4 @@ applications:
   instances: 1
   services:
   - tracker-timesheets-database
-    tracker-service-registry
+  - tracker-service-registry
